--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,12 +7,16 @@ html {
 
 body {
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 20px;
+    font-size: clamp(0.75rem, 3.5vw, 2rem);
     font-weight: 800;
 }
 
 header {
     margin: 16px;
+}
+
+a:visited {
+    color: blue;
 }
 
 span {
