--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,24 +1,3 @@
-html {
-    text-rendering: optimizeLegibility;
-    -moz-osx-font-smoothing: grayscale;
-    font-smoothing: antialiased;
-    -webkit-font-smoothing: antialiased;
-}
-
 body {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: clamp(0.9rem, 3.5vw, 2rem);
-    font-weight: 800;
-}
-
-header {
-    margin: 16px;
-}
-
-a:visited {
-    color: blue;
-}
-
-span {
-    color: transparent;
+    background-color: #000;
 }
